// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component renders a number input 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-kOvGWL {
    background: white;
    color: var(--colors-grey1000);
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    transition: background 100ms ease-out, borderColor 100ms ease-out;
    width: 100%;
  }

  .c-kOvGWL:focus-within {
    border-color: var(--colors-blue800);
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-foJWJd {
    -webkit-appearance: none;
    appearance: none;
    border: none;
    background: none;
    background-image: none;
    background-color: transparent;
    box-shadow: none;
    box-sizing: border-box;
  }

  .c-foJWJd:focus {
    outline: none;
  }

  .c-foJWJd {
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    height: 100%;
    width: 100%;
  }
}

@media  {
  .c-kOvGWL-dNqCDY-size-md {
    height: var(--sizes-4);
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }
}

@media  {
  .c-dhzjXW-ikLAKdM-css {
    margin: auto;
    height: 100px;
    width: 100px;
  }
}

<div>
  <div
    class="c-dhzjXW c-kOvGWL c-kOvGWL-dNqCDY-size-md c-dhzjXW-ikLAKdM-css"
  >
    <input
      class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-foJWJd"
      inputmode="numeric"
      pattern="[0-9]*"
      placeholder="001"
      type="text"
    />
  </div>
</div>
`;

exports[`Input component renders a text input 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-kOvGWL {
    background: white;
    color: var(--colors-grey1000);
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    transition: background 100ms ease-out, borderColor 100ms ease-out;
    width: 100%;
  }

  .c-kOvGWL:focus-within {
    border-color: var(--colors-blue800);
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-foJWJd {
    -webkit-appearance: none;
    appearance: none;
    border: none;
    background: none;
    background-image: none;
    background-color: transparent;
    box-shadow: none;
    box-sizing: border-box;
  }

  .c-foJWJd:focus {
    outline: none;
  }

  .c-foJWJd {
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    height: 100%;
    width: 100%;
  }
}

@media  {
  .c-kOvGWL-dNqCDY-size-md {
    height: var(--sizes-4);
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }
}

@media  {
  .c-dhzjXW-ikLAKdM-css {
    margin: auto;
    height: 100px;
    width: 100px;
  }
}

<div>
  <div
    class="c-dhzjXW c-kOvGWL c-kOvGWL-dNqCDY-size-md c-dhzjXW-ikLAKdM-css"
  >
    <input
      class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-foJWJd"
      placeholder="INPUT"
      type="text"
    />
  </div>
</div>
`;

exports[`Input component renders lg size 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-kOvGWL {
    background: white;
    color: var(--colors-grey1000);
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    transition: background 100ms ease-out, borderColor 100ms ease-out;
    width: 100%;
  }

  .c-kOvGWL:focus-within {
    border-color: var(--colors-blue800);
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-foJWJd {
    -webkit-appearance: none;
    appearance: none;
    border: none;
    background: none;
    background-image: none;
    background-color: transparent;
    box-shadow: none;
    box-sizing: border-box;
  }

  .c-foJWJd:focus {
    outline: none;
  }

  .c-foJWJd {
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    height: 100%;
    width: 100%;
  }
}

@media  {
  .c-kOvGWL-dNqCDY-size-md {
    height: var(--sizes-4);
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-kOvGWL-kRqBPT-disabled-true {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kOvGWL-hSbHZR-size-lg {
    height: var(--sizes-5);
  }
}

@media  {
  .c-dhzjXW-ikLAKdM-css {
    margin: auto;
    height: 100px;
    width: 100px;
  }
}

<div>
  <div
    class="c-dhzjXW c-kOvGWL c-kOvGWL-hSbHZR-size-lg"
  >
    <input
      class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-foJWJd"
      type="text"
    />
  </div>
</div>
`;
